<resources>
    <string name="app_name">graduationProject</string>
    <string name="profile_type">"I am a "</string>
    <string name="gender_text">Gender</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_job">search for course , keyword</string>
    <string name="search_for_courses">search for course , keyword</string>
    <string name="navigate">Navigate</string>
    <string name="last_added_jobs">Last Added</string>
    <string name="most_preferred_jobs">Most Preferred</string>
    <string name="categories_text">Categoires</string>
    <string name="job_discreption">Job Discreption</string>
    <string name="job_title_text">Job Title</string>
    <string name="teacher_rate_text">Teacher Rate :</string>
    <string name="category_text">Category :</string>
    <string name="rate_image">Rate Image</string>
    <string name="saved_image">saved_image</string>
    <string name="log_out_text">Log out</string>
    <string name="settings_text">Settings</string>
    <string name="profile_text">Profile</string>
    <string name="open_navigation">Open</string>
    <string name="close_navigation">Close</string>
    <string name="registering_text_msg">Registering ...</string>
    <string name="notifications_disc">Notifications</string>
    <string name="notification_title_text">Notification Title</string>
    <string name="notification_body_text">Notification Body</string>
    <string name="teacher_account_confirmation_text">Address Information</string>
    <string name="college_text">College</string>
    <string name="university_id_text">Your ID</string>
    <string name="close_popup_window_msg">Close Popup window</string>
    <string name="field_text">Field</string>
    <string name="if_you_are_a_student_expected_graduation_year_text">* If you are a student, Expected Graduation Year :</string>
    <string name="i_am_text">I am :</string>
    <string name="confirm_information_text">Confirm</string>
    <string name="available_hours_a_day_text">Available Hours A Day</string>
    <string name="available_days_a_week_text">Available Days A Week</string>
    <string name="collegeErrorMsg">*Choose Valid College Value</string>
    <string name="fieldErrorMsg">*Choose Valid Field Value</string>
    <string name="teacherAccountConfirmedTitle">Account Confirmed</string>
    <string name="teacherAccountConfirmedMsg">Teacher Account Confirmation Done </string>
    <string name="parentAccountConfirmedMsg">Parent Account Confirmation Done </string>
    <string name="teacherAccountConfirmedTitleAlready">Account Already Confirmed</string>
    <string name="teacherAccountConfirmedMsgAlready">Your Account is Already confirmed previously </string>
    <string name="errorOccurredTitle">Error</string>
    <string name="errorOccurredMsg">There are an error occurred ,please try again later</string>
    <string name="don_t_have_account_n_create_one_text">Don\'t have account ?</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="please_confirm_your_account_msg">Please Confirm Your Account</string>
    <string name="login_loading">Login …</string>
    <string name="no_notifications_added_text">No Notifications</string>
    <string name="no_messages_added_text">No Messages</string>
    <string name="create_account_text">create Account</string>
    <string name="personal_information_text">Personal Information</string>
    <string name="child_information_text">Child Information</string>
    <string name="account_image_text">Account Image</string>
    <string name="name_text">Name :</string>
    <string name="email_text_ms">Email :</string>
    <string name="phone_number_text">Phone number :</string>
    <string name="profile_image_dsc">Profile Image</string>
    <string name="select_image_msg">Select Image</string>
    <string name="number_of_children_text">Number Of Children</string>
    <string name="confirm_number_text">Confirm Number</string>
    <string name="otp">otp</string>
    <string name="otp_caps">OTP</string>
    <string name="confirm_text">Confirm</string>
    <string name="match_a_teacher">Look For Teacher</string>
    <string name="location_text">Location</string>
    <string name="teaching_time_text">Teaching Time</string>
    <string name="courses_text">Courses</string>
    <string name="choose_child_text">Choose Child</string>
    <string name="post_btn_text">Post</string>
    <string name="add_course_text">Add\nCourse</string>
    <string name="customTimeFormat">%s - %s</string>
    <string name="noMatchedDataString">No Matched Data ..</string>
    <string name="noPostedRequestsString">No Posted Requests ..</string>
</resources>