<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#FFFFFFFF"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <ImageView
            android:id="@+id/jobImage"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/job_discreption"
            app:srcCompat="@android:drawable/ic_delete" />

        <TextView
            android:id="@+id/jobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="10dp"
            android:text="@string/job_title_text"
            android:textSize="26sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="54dp"
            android:contentDescription="@string/rate_image"
            android:src="@drawable/rate_icon" />

        <TextView
            android:id="@+id/teacherRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="53dp"
            android:text="@string/teacher_rate_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="105dp"
            android:text="@string/category_text"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/bookmarkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="350dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/saved_image"
            app:srcCompat="@drawable/yellow_love_icon" />
</com.google.android.material.card.MaterialCardView>