<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/otpParentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#F2ECF6"
    android:background="@drawable/rounded_corners"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/close_icon_2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/otp_icon"
            android:contentDescription="@string/otp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="50dp"
            android:hint="@string/otp_caps"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24"
            app:errorTextColor="@color/red"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            app:hintEnabled="true"
            app:startIconDrawable="@drawable/confirm_icon">

            <EditText
                android:id="@+id/otpEditText"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/edit_text_style"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirmBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/usedColor"
            android:textAllCaps="false"
            android:text="@string/confirm_text"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/otpLayout"
            android:layout_marginTop="15dp"
            />


    </RelativeLayout>
</RelativeLayout>