<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.commonFragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Header Layout -->
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="1dp"
                android:background="#7FE1EE" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/personal_information_text"
                android:textSize="22sp" />

            <View
                android:layout_width="280dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginStart="7dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="15dp"
                android:background="#7FE1EE" />
        </LinearLayout>

        <!-- Profile Image -->
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/linearLayout3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/account_image_text"
            android:src="@drawable/user" />

        <!-- Name Layout -->
        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/profileImage"
            android:layout_below="@+id/linearLayout3"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/profileNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/editNameIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_edit" />
        </LinearLayout>

        <!-- Email Layout -->
        <LinearLayout
            android:id="@+id/emailLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameLayout"
            android:layout_toEndOf="@+id/profileImage"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/profileEmailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text_ms"
                android:textSize="17sp"/>

            <ImageView
                android:id="@+id/editEmailIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_edit" />
        </LinearLayout>

        <!-- Phone Number Layout -->
        <LinearLayout
            android:id="@+id/phoneLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailLayout"
            android:layout_toEndOf="@+id/profileImage"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/profilePhoneNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_text"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/editPhoneIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_edit" />
        </LinearLayout>

        <!-- Bio Layout -->
        <LinearLayout
            android:id="@+id/bioLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneLayout"
            android:layout_toEndOf="@+id/profileImage"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/profileBioTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bio"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/editBioIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_edit"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
