<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/teacherInformationLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#F2ECF6"
    android:background="@drawable/rounded_corners">
    <RelativeLayout
        android:id="@+id/teacherInformationLayoutParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/closeTeacherInformationPopupWindow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/close_icon_2"
            android:contentDescription="@string/close_popup_window_msg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="55dp"
            android:orientation="horizontal">

            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="1dp"
                android:background="#7FE1EE" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/teacher_account_confirmation_text"
                android:textSize="22sp" />


            <View
                android:layout_width="280dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginStart="7dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="15dp"
                android:background="#7FE1EE" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/universityId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/university_id_text"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/univerisity_id_icon"
            app:errorIconDrawable="@drawable/baseline_error_24"
            app:errorTextAppearance="@style/error_text"
            app:hintTextAppearance="@style/CustomHintTextAppearance">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_style" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/collegeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/universityId"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/college_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24"
            app:errorTextAppearance="@style/error_text"
            app:hintTextAppearance="@style/CustomHintTextAppearance">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/college_text"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/collegeSpinner"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:entries="@array/collegeSpinner"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fieldInformationLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/collegeLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="32dp"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24"
            app:errorTextAppearance="@style/error_text">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_text"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/genderSpinner"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="43dp"
                    android:entries="@array/collegeSpinner"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>
</ScrollView>